<resources>
    <string name="app_name">Attendance Checking</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="prompt_code">Mã cán bộ</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="login_progress_text">Đang đăng nhập…</string>
    <string name="schedule">Lịch dạy</string>
    <string name="check">Điểm danh</string>
    <string name="loading">Đang tải</string>
    <string name="search">Tìm kiếm</string>
    <string name="absent">Vắng</string>
    <string name="gender">Giới tính</string>
    <string name="save">Lưu</string>
    <string name="title_activity_sign_in">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="image">Ảnh</string>
    <string name="take_picture">Chụp ảnh</string>
    <string name="uploading">Đang tải lên và kiểm tra...</string>
    <string name="back">Quay về</string>
    <string name="confirm">Xác nhận</string>
</resources>
